<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="75dp"
    android:paddingLeft="20dp"
    android:background="@color/background"
    tools:context="com.example.gamze.loginformdeneme01.OrderDetailsActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/titleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textSize="20dp"
        android:textColor="@color/whitegreyish"/>

    <TextView
        android:id="@+id/menucontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="TextView"
        android:textColor="@color/whitegreyish"/>


    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:text="TextView"
        android:textColor="@color/whitegreyish"/>

    <TextView
        android:id="@+id/titleOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/title1"
        android:textSize="20dp"
        android:textColor="@color/whitegreyish"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">


        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:tint="@color/whitegreyish"

            app:srcCompat="@drawable/user_image" />

        <TextView
            android:id="@+id/ownerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="TextView"
            android:textColor="@color/whitegreyish"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">


        <ImageView
            android:id="@+id/phoneIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:tint="@color/whitegreyish"
            app:srcCompat="@drawable/phone_icon" />
        <TextView
            android:id="@+id/ownerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="TextView"
            android:textColor="@color/whitegreyish"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="30dp">

    <TextView
        android:id="@+id/takenTimeText"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/title3"
        android:textColor="@color/whitegreyish"/>

    <TextView
        android:id="@+id/takingTimeTxt"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="text"
        android:layout_height="wrap_content"
        android:textColor="@color/whitegreyish"/>
    </LinearLayout>
    <!--<ProgressBar-->
    <!--style="?android:attr/progressBarStyleLargeInverse"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/pbbar_get_item"-->
    <!--android:layout_centerHorizontal="true"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:paddingRight="15dp"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/completeBtn"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/title9"
            android:textColor="@color/whitegreyish"/>

        <Button
            android:id="@+id/cancelBtn"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/title10"
            android:textColor="@color/whitegreyish"/>

    </LinearLayout>

</LinearLayout>
